fix(hero): fix style to disallow vertical overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,3 @@ code {
 html {
   height: 100%;
 }
-
-body {
-  min-height: 100%;
-}
